fix paging transition and z-index of gradientBg

--- a/bao_bao_portfolio/src/components/commons/gradient-bg/gradient-bg.scss
+++ b/bao_bao_portfolio/src/components/commons/gradient-bg/gradient-bg.scss
@@ -1,7 +1,10 @@
 .gradient-bg {
     &__dot {
+        user-select: none;
+        pointer-events: none;
         padding-right: 20px;
         mix-blend-mode: hard-light;
         filter: blur(162.359px);
+        z-index: -1;
     }
 }
