--- a/bao_bao_portfolio/src/components/pages/home/timeline/project-box/project-box.scss
+++ b/bao_bao_portfolio/src/components/pages/home/timeline/project-box/project-box.scss
@@ -25,6 +25,9 @@
             color: $dark_green;
             text-transform: capitalize;
         }
+        &-link {
+            z-index: 99;
+        }
         &-icon {
             margin-top: 30px;
             width: 100px;
